--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -120,6 +120,10 @@ p {
     text-align:justify;
 }
 
+.gray-border {
+	border-color: gray;
+}
+
 abbr[title],
 abbr[data-original-title] {
     text-decoration: underline;
@@ -10191,6 +10195,13 @@ h5,
     z-index: 0;
 }
 
+.other-pages.owl-carousel.home-slider .slider-item .slider-text ,
+.other-pages.owl-carousel.home-slider ,
+.other-pages.owl-carousel.home-slider .slider-item {
+	height: 400px;
+	background-position: 50% 50% !important;
+}
+
 @media (max-width: 1199.98px) {
     .owl-carousel.home-slider .slider-item {
         background-position: center center !important;
@@ -10283,7 +10294,6 @@ h5,
 }
 
 .owl-carousel.home-slider .slider-item .slider-text .breadcrumbs {
-    text-transform: uppercase;
     font-size: 13px;
 }
 
