touch drag bu fix with css

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12690,3 +12690,8 @@ footer a:hover {
         stroke-dashoffset: -136px;
     }
 }
+
+.owl-carousel .owl-stage, .owl-carousel.owl-drag .owl-item{
+    -ms-touch-action: auto;
+        touch-action: auto;
+}
