--- a/public/dashboard/css/dashmain.css
+++ b/public/dashboard/css/dashmain.css
@@ -13,7 +13,7 @@
   --cyan: #17a2b8;
   --white: #FFF;
   --gray: #6c757d;
-  --gray-dark: #343a40;
+  --gray-dark: #1D150B;
   --primary: #C49B63;
   --secondary: #6c757d;
   --success: #28a745;
@@ -21,7 +21,7 @@
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
-  --dark: #343a40;
+  --dark: #1D150B;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -2812,14 +2812,14 @@ fieldset:disabled a.btn {
 
 .btn-dark {
   color: #FFF;
-  background-color: #343a40;
-  border-color: #343a40;
+  background-color: #1D150B;
+  border-color: #1D150B;
 }
 
 .btn-dark:hover {
   color: #FFF;
-  background-color: #23272b;
-  border-color: #1d2124;
+  background-color: #1D150B;
+  border-color: #1D150B;
 }
 
 .btn-dark:focus, .btn-dark.focus {
@@ -2829,15 +2829,15 @@ fieldset:disabled a.btn {
 
 .btn-dark.disabled, .btn-dark:disabled {
   color: #FFF;
-  background-color: #343a40;
-  border-color: #343a40;
+  background-color: #1D150B;
+  border-color: #1D150B;
 }
 
 .btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active,
 .show > .btn-dark.dropdown-toggle {
   color: #FFF;
-  background-color: #1d2124;
-  border-color: #171a1d;
+  background-color: #1D150B;
+  border-color: #1D150B;
 }
 
 .btn-dark:not(:disabled):not(.disabled):active:focus, .btn-dark:not(:disabled):not(.disabled).active:focus,
@@ -3099,16 +3099,16 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-dark {
-  color: #343a40;
+  color: #1D150B !important;
   background-color: transparent;
   background-image: none;
-  border-color: #343a40;
+  border-color: #1D150B !important;
 }
 
 .btn-outline-dark:hover {
-  color: #FFF;
-  background-color: #343a40;
-  border-color: #343a40;
+  color: #FFF !important;
+  background-color: #1D150B !important;
+  border-color: #1D150B !important;
 }
 
 .btn-outline-dark:focus, .btn-outline-dark.focus {
@@ -3117,15 +3117,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-dark.disabled, .btn-outline-dark:disabled {
-  color: #343a40;
+  color: #1D150B;
   background-color: transparent;
 }
 
 .btn-outline-dark:not(:disabled):not(.disabled):active, .btn-outline-dark:not(:disabled):not(.disabled).active,
 .show > .btn-outline-dark.dropdown-toggle {
   color: #FFF;
-  background-color: #343a40;
-  border-color: #343a40;
+  background-color: #1D150B;
+  border-color: #1D150B;
 }
 
 .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus,
@@ -5148,7 +5148,7 @@ input[type="button"].btn-block {
 
 .badge-dark {
   color: #FFF;
-  background-color: #343a40;
+  background-color: #1D150B;
 }
 
 .badge-dark[href]:hover, .badge-dark[href]:focus {
@@ -6465,7 +6465,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #1D150B !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
@@ -6551,7 +6551,7 @@ button.bg-dark:focus {
 }
 
 .border-dark {
-  border-color: #343a40 !important;
+  border-color: #1D150B !important;
 }
 
 .border-white {
@@ -9356,7 +9356,7 @@ a.text-light:hover, a.text-light:focus {
 }
 
 .text-dark {
-  color: #343a40 !important;
+  color: #1D150B !important;
 }
 
 a.text-dark:hover, a.text-dark:focus {
