--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4001,7 +4001,7 @@ input[type="button"].btn-block {
 .custom-control-label::before {
     position: absolute;
     top: 0.25rem;
-    left: 0;
+    right: 0;
     display: block;
     width: 1rem;
     height: 1rem;
@@ -4017,7 +4017,7 @@ input[type="button"].btn-block {
 .custom-control-label::after {
     position: absolute;
     top: 0.25rem;
-    left: 0;
+    right: 0;
     display: block;
     width: 1rem;
     height: 1rem;
@@ -4060,7 +4060,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-    background-color: #78d5ef;
+    background-color: #c49b63;
 }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
@@ -10956,7 +10956,6 @@ h5,
 }
 
 .table {
-    min-width: 1000px !important;
     width: 100%;
     text-align: center;
 }
@@ -11142,13 +11141,14 @@ h5,
 .billing-form .form-control:active,
 .billing-form .form-control.gold {
     border-color: #c49b63 !important;
+    color: #c49b63 !important;
 }
 
 .billing-form textarea.form-control {
     height: inherit !important;
 }
 
-.billing-form button[type=submit] {
+.billing-form button[type=submit], .btn-large {
     padding: 15px 30px;
 }
 
@@ -12720,4 +12720,34 @@ footer a:hover {
 
 .tag-cloud-link {
 	cursor: auto;
+}
+
+.cart-count-panel .change {
+	border: 1px solid #c49b63;
+	font-size: 1.5em;
+	text-align: center;
+	font-weight: bold;
+	padding: 0;
+	cursor: pointer;
+}
+
+.cart-count-panel .change span {
+	color: #c49b63;
+}
+
+.cart-count-panel .input .form-control {
+	height: 42px !important;
+	color: #c49b63 !important;
+	border: 1px solid #c49b63 !important;
+	padding: 15px;
+}
+
+#account .form-control {
+	height: 42px !important;
+	padding: 5px;
+	font-size: 16px;
+}
+
+.hidden {
+	display: none;
 }
