footer bg image

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11280,7 +11280,7 @@ textarea.form-control {
 .ftco-footer {
     font-size: 16px;
     padding: 6rem 0 1rem 0;
-    background: #120f0f;
+    background-image: url(../images/bg_4.jpg);
 }
 
 .ftco-footer .ftco-footer-logo {
